--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "swiper": "^11.1.12",
         "tailwindcss": "^3.1.6",
         "toastify-js": "^1.12.0"
+    },
+    "dependencies": {
+        "moment": "^2.30.1"
     }
 }
